<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg"
    tools:context="com.shishiTec.HiMaster.UI.Activity.UserCenter.SettingsActivity">
    <include
        layout="@layout/include_toolbar"/>
    <RelativeLayout
        android:id="@+id/submit_suggest"
        android:layout_marginTop="@dimen/gap_40px"
        android:paddingLeft="@dimen/gap_24px"
        android:layout_width="match_parent"
        android:paddingRight="@dimen/gap_20px"
        android:layout_height="@dimen/gap_110px"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_15sp"
            android:textColor="@color/color_6665"
            android:text="@string/submit_suggest"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:drawableRight="@mipmap/next"
            android:drawablePadding="@dimen/gap_10dp"
            android:textSize="@dimen/font_15sp"
            android:textColor="@color/color_b3b1"
            android:text="@string/be_better"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/gap_1px"
        android:background="@color/divide_line"
        android:layout_marginLeft="@dimen/gap_24px"
        android:layout_marginRight="@dimen/gap_20px"/>
    <RelativeLayout
        android:id="@+id/to_gradle"
        android:paddingLeft="@dimen/gap_24px"
        android:layout_width="match_parent"
        android:paddingRight="@dimen/gap_20px"
        android:layout_height="@dimen/gap_110px"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_15sp"
            android:textColor="@color/color_6665"
            android:text="@string/like_master"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/gap_1px"
        android:background="@color/divide_line"
        android:layout_marginLeft="@dimen/gap_24px"
        android:layout_marginRight="@dimen/gap_20px"/>
    <RelativeLayout
        android:id="@+id/abort_us"
        android:paddingLeft="@dimen/gap_24px"
        android:layout_width="match_parent"
        android:paddingRight="@dimen/gap_20px"
        android:layout_height="@dimen/gap_110px"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_15sp"
            android:textColor="@color/color_6665"
            android:text="@string/abort_us"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/clear_cache"
        android:layout_marginTop="@dimen/gap_40px"
        android:paddingLeft="@dimen/gap_24px"
        android:layout_width="match_parent"
        android:paddingRight="@dimen/gap_20px"
        android:layout_height="@dimen/gap_110px"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_15sp"
            android:textColor="@color/color_2eb6ef"
            android:text="@string/clear_cache"
            android:id="@+id/tv_clear_cache" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logout_accout"
        android:layout_marginTop="@dimen/gap_40px"
        android:paddingLeft="@dimen/gap_24px"
        android:layout_width="match_parent"
        android:paddingRight="@dimen/gap_20px"
        android:layout_height="@dimen/gap_110px"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/font_15sp"
            android:textColor="@color/color_6665"
            android:text="@string/logout_account"/>
    </RelativeLayout>

</LinearLayout>
